# orthanc-postgresql

./: AUTHORS  CMakeLists.txt  NEWS  ProjectHome.md  README
Core/: Configuration.cpp  Configuration.h  GlobalProperties.cpp  GlobalProperties.h  GlobalProperties.sql  PostgreSQLConnection.cpp  PostgreSQLConnection.h  PostgreSQLException.h  PostgreSQLLargeObject.cpp  PostgreSQLLargeObject.h  PostgreSQLResult.cpp  PostgreSQLResult.h  PostgreSQLStatement.cpp  PostgreSQLStatement.h  PostgreSQLTransaction.cpp  PostgreSQLTransaction.h
IndexPlugin/: Plugin.cpp  PostgreSQLPrepare.sql  PostgreSQLUpserts.sql  PostgreSQLWrapper.cpp  PostgreSQLWrapper.h
Resources/: EmbedResources.py  OldLockingMechanism.txt
Resources/CMake/: AutoGeneratedCode.cmake  BoostConfiguration.cmake  Compiler.cmake  FindPostgreSQL.cmake  JsonCppConfiguration.cmake  PostgreSQLConfiguration.cmake
StoragePlugin/: Plugin.cpp  PostgreSQLStorageArea.cpp  PostgreSQLStorageArea.h
UnitTestsSources/: PostgreSQLTests.cpp  PostgreSQLWrapperTests.cpp  UnitTestsMain.cpp
